# ECHO

./: .gitignore  CNAME  LICENSE  README.md  docker-compose.yml  vercel.json
.pnpm-store/v11/: index.db-shm  index.db-wal
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  dashboard.py  documents.py  router.py  simulations.py  simulator.py  subjects.py  twin.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  digital_twin.py
backend/app/schemas/: auth.py  twin.py
backend/app/services/: analysis.py  digital_twin.py  documents.py  extraction.py  insights.py  ocr.py  prediction.py  simulator.py  timeline.py
backend/echo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/simulator/: page.tsx
frontend/src/app/twin/: page.tsx
frontend/src/components/: charts.tsx  dashboard-sidebar.tsx  document-manager.tsx  landing-nav.tsx  live-dashboard.tsx  progress-ring.tsx  simulator-panel.tsx  twin-view.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: api.ts
