[project]
name = "echo-api"
version = "0.1.0"
description = "API for ECHO, an academic digital twin"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "sqlalchemy>=2.0.36,<2.1.0",
  "pydantic-settings>=2.6.0,<2.7.0",
  "email-validator>=2.2.0,<3.0.0",
  "pyjwt>=2.10.0,<3.0.0",
  "pwdlib[argon2]>=0.2.1,<0.3.0",
  "python-multipart>=0.0.19,<0.1.0",
  "pymupdf>=1.24.0,<2.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "pillow>=10.4.0,<11.0.0",
  "pytesseract>=0.3.13,<0.4.0",
  "openai>=1.59.0,<2.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.28.0", "ruff>=0.8.0"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["uploads*"]
